--- a/.github/workflows/ci-mod-module-template.yaml
+++ b/.github/workflows/ci-mod-module-template.yaml
@@ -1,231 +1,236 @@
----
 name: CI module-template 🧹
+
+# Define Dagger versions at the top of the file
+env:
+  DAGGER_VERSIONS: >-
+    ["0.13.0", "0.13.1", "0.13.2", "0.13.3"]
+  DAGGER_LATEST_VERSION: "0.13.3"
+
 on:
-    push:
-        branches:
-            - main
-            - master
-        paths:
-            - module-template/**/*.go
-    pull_request:
-        paths:
-            - module-template/**/*.go
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
+    paths:
+      - module-template/**/*.go
+  pull_request:
+    paths:
+      - module-template/**/*.go
+  workflow_dispatch:
 
 permissions:
-    contents: read
-    pull-requests: read
-    checks: write
+  contents: read
+  pull-requests: read
+  checks: write
 
 defaults:
-    run:
-        working-directory: module-template
+  run:
+    working-directory: module-template
 
 jobs:
-    dagger-linter:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4, 0.12.5, 0.12.6, 0.12.7]
-        name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  dagger-linter:
+    strategy:
+      matrix:
+        go: ["1.22"]
+        dagversion: ${{ fromJson(env.DAGGER_VERSIONS) }}
+    name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  module: module-template
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  module: module-template/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  module: module-template/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    golangci-lint:
-        strategy:
-            matrix:
-                go: ['1.22']
-        name: GolangCI-Lint for module-template
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
+  golangci-lint:
+    strategy:
+      matrix:
+        go: ["1.22"]
+    name: GolangCI-Lint for module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
 
       # Dagger main module 📦 (develop & golang ci-lint)
-            - name: Dagger Develop on Module 📦 module-template with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Module 📦 module-template with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template
+          version: ${{ env.DAGGER_LATEST_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          # Install golangci-lint using curl
-            - name: Install golangci-lint
-              run: |
-                  curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
-                  sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+      # Install golangci-lint using curl
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
-            - name: Run golangci-lint on module-template 📦
-              run: |
-                  golangci-lint run --config=../.golangci.yml --verbose
+      - name: Run golangci-lint on module-template 📦
+        run: |
+          golangci-lint run --config=../.golangci.yml --verbose
 
       # Dagger test module 🧪 (develop & golang ci-lint)
-            - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on module-template/tests 🧪
-              run: |
-                  cd tests
-                  ls -ltrah
-                  golangci-lint run --config=../../.golangci.yml --verbose
+      - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ env.DAGGER_LATEST_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on module-template/tests 🧪
+        run: |
+          cd tests
+          ls -ltrah
+          golangci-lint run --config=../../.golangci.yml --verbose
 
       # Dagger examples (go) module 📄 (develop & golang ci-lint)
-            - name: Dagger Develop on Module Examples/Go 📄 module-template with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on module-template/examples/go 📄 (develop & golang ci-lint)
-              run: |
-                  cd examples/go
-                  ls -ltrah
-                  golangci-lint run --config=../../../.golangci.yml --verbose
+      - name: Dagger Develop on Module Examples/Go 📄 module-template with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/examples/go
+          version: ${{ env.DAGGER_LATEST_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on module-template/examples/go 📄 (develop & golang ci-lint)
+        run: |
+          cd examples/go
+          ls -ltrah
+          golangci-lint run --config=../../../.golangci.yml --verbose
 
-    module-test:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4, 0.12.5, 0.12.6, 0.12.7]
-        needs: [dagger-linter, golangci-lint]
-        name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  args: test-all
-                  module: module-template/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  module-test:
+    strategy:
+      matrix:
+        go: ["1.22"]
+        dagversion: ${{ fromJson(env.DAGGER_VERSIONS) }}
+    needs: [dagger-linter, golangci-lint]
+    name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Tests 💣 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: test-all
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    module-template-recipes-go:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.12.7]
-        needs: [dagger-linter, golangci-lint]
-        name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module Examples 📄 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: module-template/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Recipes all recipes 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  args: all-recipes
-                  module: module-template/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  module-template-recipes-go:
+    strategy:
+      matrix:
+        go: ["1.22"]
+    needs: [dagger-linter, golangci-lint]
+    name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module Examples 📄 with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/examples/go
+          version: ${{ env.DAGGER_LATEST_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Recipes all recipes 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: all-recipes
+          module: module-template/examples/go
+          version: ${{ env.DAGGER_LATEST_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
