--- a/.github/workflows/ci-mod-tflinter.yaml
+++ b/.github/workflows/ci-mod-tflinter.yaml
@@ -22,15 +22,15 @@ defaults:
         working-directory: tflinter
 
 env:
-    DAGGER_VERSION_EXAMPLES_GO: 0.13.5
+    DAGGER_VERSION_EXAMPLES_GO: 0.13.7
 
 jobs:
     dagger-linter:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.4, 0.13.5]
-        name: Lint tflinter on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+                dagversion: [0.13.6, 0.13.7]
+        name: Lint tflinter on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -116,15 +116,15 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          # Install golangci-lint using curl
+      # Install golangci-lint using curl
             - name: Install golangci-lint
               run: |
-                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
-                sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+                  curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                  sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
             - name: Run golangci-lint on tflinter 📦
               run: |
-                golangci-lint run --config=../.golangci.yml --verbose
+                  golangci-lint run --config=../.golangci.yml --verbose
 
       # Dagger test module 🧪 (develop & golang ci-lint)
             - name: Dagger Develop on Module tests 🧪 tflinter with Dagger ${{ matrix.dagversion }}
@@ -138,9 +138,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on tflinter/tests 🧪
               run: |
-                cd tests
-                ls -ltrah
-                golangci-lint run --config=../../.golangci.yml --verbose
+                  cd tests
+                  ls -ltrah
+                  golangci-lint run --config=../../.golangci.yml --verbose
 
       # Dagger examples (go) module 📄 (develop & golang ci-lint)
             - name: Dagger Develop on Module Examples/Go 📄 tflinter with Dagger ${{ matrix.dagversion }}
@@ -154,17 +154,17 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on tflinter/examples/go 📄 (develop & golang ci-lint)
               run: |
-                cd examples/go
-                ls -ltrah
-                golangci-lint run --config=../../../.golangci.yml --verbose
+                  cd examples/go
+                  ls -ltrah
+                  golangci-lint run --config=../../../.golangci.yml --verbose
 
     tflinter-test:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.4, 0.13.5]
+                dagversion: [0.13.6, 0.13.7]
         needs: [dagger-linter, golangci-lint]
-        name: Run Tests 🧪 in tflinter on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Run Tests 🧪 in tflinter on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -189,7 +189,7 @@ jobs:
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in tflinter on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Tests 💣 in tflinter on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
@@ -204,9 +204,9 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.5]
+                dagversion: [0.13.6, 0.13.7]
         needs: [dagger-linter, golangci-lint]
-        name: Run recipes 🥗 in tflinter/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Run recipes 🥗 in tflinter/examples/go on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
