--- a/.github/workflows/ci-mod-gopkgpublisher.yaml
+++ b/.github/workflows/ci-mod-gopkgpublisher.yaml
@@ -22,14 +22,14 @@ defaults:
         working-directory: gopkgpublisher
 
 env:
-    DAGGER_VERSION_EXAMPLES_GO: 0.13.7
+    DAGGER_VERSION_EXAMPLES_GO: 0.14.0
 
 jobs:
     dagger-linter:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.6, 0.13.7]
+                dagversion: [0.14.0]
         name: Lint gopkgpublisher on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -116,15 +116,15 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          # Install golangci-lint using curl
+      # Install golangci-lint using curl
             - name: Install golangci-lint
               run: |
-                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
-                sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+                  curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                  sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
             - name: Run golangci-lint on gopkgpublisher 📦
               run: |
-                golangci-lint run --config=../.golangci.yml --verbose
+                  golangci-lint run --config=../.golangci.yml --verbose
 
       # Dagger test module 🧪 (develop & golang ci-lint)
             - name: Dagger Develop on Module tests 🧪 gopkgpublisher with Dagger ${{ matrix.dagversion }}
@@ -138,9 +138,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on gopkgpublisher/tests 🧪
               run: |
-                cd tests
-                ls -ltrah
-                golangci-lint run --config=../../.golangci.yml --verbose
+                  cd tests
+                  ls -ltrah
+                  golangci-lint run --config=../../.golangci.yml --verbose
 
       # Dagger examples (go) module 📄 (develop & golang ci-lint)
             - name: Dagger Develop on Module Examples/Go 📄 gopkgpublisher with Dagger ${{ matrix.dagversion }}
@@ -154,15 +154,15 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on gopkgpublisher/examples/go 📄 (develop & golang ci-lint)
               run: |
-                cd examples/go
-                ls -ltrah
-                golangci-lint run --config=../../../.golangci.yml --verbose
+                  cd examples/go
+                  ls -ltrah
+                  golangci-lint run --config=../../../.golangci.yml --verbose
 
     gopkgpublisher-test:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.6, 0.13.7]
+                dagversion: [0.14.0]
         needs: [dagger-linter, golangci-lint]
         name: Run Tests 🧪 in gopkgpublisher on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
