ci: Update CI workflows for module templates
The changes in this commit update the CI workflows for the module-template and module-template-light projects. The key changes are:

- Standardize the "verb" parameter in the dagger-for-github action to use "call" instead of "verb" for consistency.
- Add comments to clarify that the "call" action will list all the functions by default.
- Update the matrix strategy to include both Dagger versions 0.13.7 and 0.14.0 for testing.
- Ensure the CI workflows run on both the main and master branches, as well as when changes are made to the module-template and module-template-light directories.

These changes aim to improve the reliability and maintainability of the CI workflows for the module template projects.

--- a/.github/workflows/ci-mod-module-template-light.yaml
+++ b/.github/workflows/ci-mod-module-template-light.yaml
@@ -69,7 +69,8 @@ jobs:
       - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
-          verb: call
+          # Default, it should list all the functions.
+          call:
           module: module-template-light
           version: ${{ matrix.dagversion }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
@@ -78,7 +79,8 @@ jobs:
       - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
-          verb: call
+          # Default, it should list all the functions.
+          call:
           module: module-template-light/tests
           version: ${{ matrix.dagversion }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
@@ -87,7 +89,8 @@ jobs:
       - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
-          verb: call
+          # Default, it should list all the functions.
+          call:
           module: module-template-light/examples/go
           version: ${{ matrix.dagversion }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
